# CompanionBot

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml  requirements.txt
config/: family_members.yaml  minicpm.yaml  notification_contacts.yaml  personality.yaml
deploy/: .env.example  Dockerfile  Dockerfile.llm  deploy.sh  deploy_bare.sh  docker-compose.yml
mobile/android/: .gitignore  MINICPM_ADAPTATION.md  settings.gradle.kts
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
mobile/android/app/src/main/res/layout/: activity_enroll.xml  activity_family.xml  activity_main.xml  activity_member_detail.xml  activity_settings.xml  item_episode.xml  item_family_member.xml
model/train/: .generate_progress.json  generate.py  harness.py  harness_plan_log.jsonl  harness_report.txt  monitor.sh  quality_check.py  scenes.yaml  tiantian_prompt.txt
scripts/: enroll_member.py  evaluate.sh  setup_minicpm.sh  simulate_conversation.py  start_server.sh  test_chat.py  test_full_simulation.py  test_pipeline.py  verify_personality.py  verify_safety.py
server/: bot_instance.py  bot_manager.py  llm_server.py  main.py  ws_handler.py
server/engine/: minicpm_engine.py
server/memory/: consolidation.py  episodic_memory.py  habit_memory.py  long_term_profile.py  semantic_memory.py  working_memory.py
server/output/: notification.py  tts.py
server/perception/: asr.py  face_id.py  identity_fusion.py  speaker_id.py  vad.py
server/personality/: engine.py  intervention.py  llm_client.py  proactive.py  prompt_builder.py
server/safety/: alert_manager.py  anomaly_detector.py
server/static/: version.json
server/utils/: audio.py  keywords.py
tests/: conftest.py  test_anomaly.py  test_e2e_human_sim.py  test_intervention.py  test_llm_client.py  test_memory.py  test_personality.py  test_proactive.py  test_speaker_id.py
(+23 files in other folders)
